--- a/index.html
+++ b/index.html
@@ -448,8 +448,8 @@
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">AILC Lectures on Computational Linguistics 2024</b>,  19-21 June 2024, Università degli Studi di Bari Aldo Moro, Bari, Italy. TITLE: “Hands-on Large Language Models”</li>
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">Computer Science Workshop 2024</b>, 9-10 September 2024, DIBRIS department, University of Genoa. TITLE: “Large Language Models: The Italian Perspective”</li>
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)"><a href="https://hcai-ovgu.github.io/symposium2024/speakers.html" target="_blank" style="color:hsl(45, 54%, 58%)">HCAI Symposium 2024</b></a> 4-5 November 2024, Otto von Guericke University,Magdeburg, Germany. TITLE: “Large Language Models meets Human-Computer Interaction: The Large Agentic Models perspective”</li>
-            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">DMIF - Dipartimento di Scienze Matematiche, Informatiche e Fisiche</b></a> 29 November 2024, Università di Udine, Italia. TITLE: “Large Language Models in Recommender Systems”</li>
-            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">Unict - Dipartimento di Matematica e Informatica</b></a> 12 December 2024, Università di Catania, Italia. TITLE: “The long journey to Large Language Models: The NLP breakthrough”</li>
+            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">DMIF - Dipartimento di Scienze Matematiche, Informatiche e Fisiche</b></a>, 29 November 2024, Università di Udine, Italia. TITLE: “Large Language Models in Recommender Systems”</li>
+            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">Unict - Dipartimento di Matematica e Informatica</b></a>, 12 December 2024, Università di Catania, Italia. TITLE: “The long journey to Large Language Models: The NLP breakthrough”</li>
 
           </ul>
         </section>
@@ -473,7 +473,9 @@
           <h3 class="h3 skills-title">SUPERVISION</h3>
           <ul>
             <li style="color:white;list-style: square;"> <b style="color:hsl(45, 54%, 58%)">Scientific Supervisor of one Research Assistant</b> at the Department of Computer Science, University of Bari Aldo Moro, starting in August 2023 ending in 2024</li>
-            <li style="color:white;list-style: square;"> <b style="color:hsl(45, 54%, 58%)">Co-Supervisor of one Ph.D. Student</b> at the Department of Computer Science, University of Bari Aldo Moro, XXXIX Cycle, starting 2023-2024 </li>
+            <li style="color:white;list-style: square;"> <b style="color:hsl(45, 54%, 58%)">Evaluation Committee of one Ph.D. Student</b> at the Department of Computer Science, University of Bari Aldo Moro, XXXIX Cycle, starting 2023-2024 </li>
+            <li style="color:white;list-style: square;"> <b style="color:hsl(45, 54%, 58%)">Co-Supervisor of one Ph.D. Student</b> at the Department of Computer Science, University of Bari Aldo Moro, XL Cycle, starting 2024-2025 </li>
+            <li style="color:white;list-style: square;"> <b style="color:hsl(45, 54%, 58%)">Evaluation Committee of two Ph.D. Student</b> at the Department of Computer Science, University of Turin, defense in 2024 </li>
             <li style="color:white;list-style: square;"> <b style="color:hsl(45, 54%, 58%)">Supervisor</b> of more than 35 bachelor's theses and 15 master's theses</li>
           <ul>
         </section>
@@ -483,8 +485,9 @@
           <ul>
             <li style="color:white;list-style: square;"> <span style="color:hsl(45, 54%, 58%)">"Deep Learning for Natural Language Processing".</span>  3 ECTS credits, doctorate in Computer Science and Mathematics, University of Bari, a.y. 2021/2022</li>
             <li style="color:white;list-style: square;"> <span style="color:hsl(45, 54%, 58%)">"Deep Learning for Content Representation in Recommender Systems".</span> 3 ECTS credits, Doctorate in Computer Science and Mathematics, University of Bari, a.y. 2022/2023</li>
+            <li style="color:white;list-style: square;"> <span style="color:hsl(45, 54%, 58%)">"Human-Centered Natural Language Processing ".</span> 3 ECTS credits, Doctorate in Computer Science and Mathematics, University of Bari, a.y. 2024/20235</li>
             <li style="color:white;list-style: square;"> <span style="color:hsl(45, 54%, 58%)">"UMAP 2022/2023, ACM Conference on User Modeling, Adaptation and Personalization.</span> Tutorial about: “Semantics-aware Content Representations for Reproducible Recommender Systems (SCoRe)”</li>
-          <ul>
+            <ul>
         </section>
 
         <section class="projects" style="font-size:14px; font-weight: 300;">
@@ -507,12 +510,17 @@
             <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">Expert evaluator for the Austrian Science Fund (FWF)</span></li>
             <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">Expert evaluator for the Israel Science Foundation (ISF)
             <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">Expert evaluator for the Open Research Europe (F1000)</span></li>
+            <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">Expert evaluator for "Advancing Large AI Models: Integration of New Data Modalities and Expansion of Capabilities (AI, Data and Robotics Partnership) (RIA) HORIZON-CL4-2024-HUMAN-03-01"</span></li>
           </ul>
           <br><br>
         </section>
 
         <section class="skill" style="font-size:14px; font-weight: 300;">
-
+          <h3 class="h3 skills-title">COMMUNITY SERVICE</h3>
+          <h4 class="h4">General Chair:</h4>
+          <ul>
+            <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">CLiC-it 2025</span> 11th AILC Conference on Computational Linguistics, Cagliari, Italy </li>
+          </ul><br>
           <h3 class="h3 skills-title">COMMUNITY SERVICE</h3>
           <h4 class="h4">Co-chair:</h4>
           <ul>
