--- a/index.html
+++ b/index.html
@@ -428,6 +428,7 @@
           <h3 class="h3 skills-title">VISITING EXPERIENCE</h3>
           <ul style="color:white; list-style: square;">
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">OVGU - Otto-von-Guericke-Universität Magdeburg - <a href="https://hcai.ovgu.de/" style="color:cyan;">Human-Centred Artificial Intelligence Research Group</a></b> 25/02/2024 - 25/05/2024 - 40 hours Block Lectures - "Human-Centred Natural Language Processing" </li>
+            <br> </b> 05/02/2025 - 05/03/2025 - 40 hours Block Lectures - "Human-Centred Natural Language Processing" </li>
           </ul>
         </section>
         <section class="skill" style="font-size:14px; font-weight: 300;">
@@ -450,7 +451,7 @@
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)"><a href="https://hcai-ovgu.github.io/symposium2024/speakers.html" target="_blank" style="color:hsl(45, 54%, 58%)">HCAI Symposium 2024</b></a> 4-5 November 2024, Otto von Guericke University,Magdeburg, Germany. TITLE: “Large Language Models meets Human-Computer Interaction: The Large Agentic Models perspective”</li>
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">DMIF - Dipartimento di Scienze Matematiche, Informatiche e Fisiche</b></a>, 29 November 2024, Università di Udine, Italia. TITLE: “Large Language Models in Recommender Systems”</li>
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">Unict - Dipartimento di Matematica e Informatica</b></a>, 12 December 2024, Università di Catania, Italia. TITLE: “The long journey to Large Language Models: The NLP breakthrough”</li>
-
+            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">DELTA Lab - The Department of Industrial Engineering</b></a>, 16 January 2025, Tel-Aviv University, Israel TITLE: “LLMs meets Recommender Systems: An overview”</li>
           </ul>
         </section>
         <section class="skill" style="font-size:14px; font-weight: 300;">
@@ -461,6 +462,8 @@
             <li style="list-style: square;"> (JSIS) <b>The Journal of Strategic Information Systems, Elsevier</b> Online ISSN: 1873-1198, Print ISSN: 0963-8687 - Editorial Board <a href="https://www.sciencedirect.com/journal/the-journal-of-strategic-information-systems/about/editorial-board" style="color:cyan; display:inline">https://www.sciencedirect.com//</a></li>
             <li style="list-style: square;"> (IJCOL) <b>Italian Journal of Computational Linguistics, OpenEditions Journals</b> Electronic ISSN 2499-4553 - Editorial Board <a href="https://journals.openedition.org/ijcol/490" style="color:cyan; display:inline">https://journals.openedition.org/ijcol/490</a></li>
             <li style="list-style: square;"> (IA) <b>Intelligenza Artificiale, IO-Press</b> Electronic ISSN 2211-0097 - Guest Editor Special Issue NL4AI 2022  <a href="https://content.iospress.com/articles/intelligenza-artificiale/ia172157" style="color:cyan; display:inline">https://content.iospress.com/articles/intelligenza-artificiale/ia172157</a></li>
+            <li style="list-style: square;"> (SREP) <b>Scientific Reports, Springer Nature</b> Electronic ISSN 2045-2322 - Editorial Borad 2025 <a href="https://www.nature.com/srep/" style="color:cyan; display:inline">https://www.nature.com/srep/</a></li>
+          
           </ul><br>
           <h4 class="h4">Reviewer Board:</h4>
           <ul style="color:hsl(45, 54%, 58%); list-style: square;">
