--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
           <h3 class="h3 skills-title">VISITING EXPERIENCE</h3>
           <ul style="color:white; list-style: square;">
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">OVGU - Otto-von-Guericke-Universität Magdeburg - <a href="https://hcai.ovgu.de/" style="color:cyan;">Human-Centred Artificial Intelligence Research Group</a></b> 25/02/2024 - 25/05/2024 - 40 hours Block Lectures - "Human-Centred Natural Language Processing" </li>
-            <br> </b> 05/02/2025 - 05/03/2025 - 40 hours Block Lectures - "Human-Centred Natural Language Processing" </li>
+            </b> 05/02/2025 - 05/03/2025 - 40 hours Block Lectures - "Human-Centred Natural Language Processing" </li>
           </ul>
         </section>
         <section class="skill" style="font-size:14px; font-weight: 300;">
@@ -448,10 +448,10 @@
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">RecSys Summer School 2024</b>, Supported by ACM RecSys, SIGCHI, ACM Europe, EURAI, and University of Cagliari, October 8-12 2024, Bari, Italy. TITLE: “Large Language Models in Recommender Systems”</li>
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">AILC Lectures on Computational Linguistics 2024</b>,  19-21 June 2024, Università degli Studi di Bari Aldo Moro, Bari, Italy. TITLE: “Hands-on Large Language Models”</li>
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">Computer Science Workshop 2024</b>, 9-10 September 2024, DIBRIS department, University of Genoa. TITLE: “Large Language Models: The Italian Perspective”</li>
-            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)"><a href="https://hcai-ovgu.github.io/symposium2024/speakers.html" target="_blank" style="color:hsl(45, 54%, 58%)">HCAI Symposium 2024</b></a> 4-5 November 2024, Otto von Guericke University,Magdeburg, Germany. TITLE: “Large Language Models meets Human-Computer Interaction: The Large Agentic Models perspective”</li>
+            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)"><a href="https://hcai-ovgu.github.io/symposium2024/speakers.html" target="_blank" style="color:hsl(45, 54%, 58%)">HCAI Symposium 2024</b></a> 4-5 November 2024, Otto von Guericke University,Magdeburg, Germany. TITLE: “Large Language Models meet Human-Computer Interaction: The Large Agentic Models perspective”</li>
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">DMIF - Dipartimento di Scienze Matematiche, Informatiche e Fisiche</b></a>, 29 November 2024, Università di Udine, Italia. TITLE: “Large Language Models in Recommender Systems”</li>
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">Unict - Dipartimento di Matematica e Informatica</b></a>, 12 December 2024, Università di Catania, Italia. TITLE: “The long journey to Large Language Models: The NLP breakthrough”</li>
-            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">DELTA Lab - The Department of Industrial Engineering</b></a>, 16 January 2025, Tel-Aviv University, Israel TITLE: “LLMs meets Recommender Systems: An overview”</li>
+            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">DELTA Lab - The Department of Industrial Engineering</b></a>, 16 January 2025, Tel-Aviv University, Israel TITLE: “LLMs meet Recommender Systems: An overview”</li>
           </ul>
         </section>
         <section class="skill" style="font-size:14px; font-weight: 300;">
