--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
             <li style="list-style: square;"> (JSIS) <b>The Journal of Strategic Information Systems, Elsevier</b> Online ISSN: 1873-1198, Print ISSN: 0963-8687 - Editorial Board <a href="https://www.sciencedirect.com/journal/the-journal-of-strategic-information-systems/about/editorial-board" style="color:cyan; display:inline">https://www.sciencedirect.com//</a></li>
             <li style="list-style: square;"> (IJCOL) <b>Italian Journal of Computational Linguistics, OpenEditions Journals</b> Electronic ISSN 2499-4553 - Editorial Board <a href="https://journals.openedition.org/ijcol/490" style="color:cyan; display:inline">https://journals.openedition.org/ijcol/490</a></li>
             <li style="list-style: square;"> (IA) <b>Intelligenza Artificiale, IO-Press</b> Electronic ISSN 2211-0097 - Guest Editor Special Issue NL4AI 2022  <a href="https://content.iospress.com/articles/intelligenza-artificiale/ia172157" style="color:cyan; display:inline">https://content.iospress.com/articles/intelligenza-artificiale/ia172157</a></li>
-            <li style="list-style: square;"> (SREP) <b>Scientific Reports, Springer Nature</b> Electronic ISSN 2045-2322 - Editorial Borad 2025 <a href="https://www.nature.com/srep/" style="color:cyan; display:inline">https://www.nature.com/srep/</a></li>
+            <li style="list-style: square;"> (SREP) <b>Scientific Reports, Springer Nature</b> Electronic ISSN 2045-2322 - Editorial Borad <br> <a href="https://www.nature.com/srep/" style="color:cyan; display:inline">https://www.nature.com/srep/</a></li>
           
           </ul><br>
           <h4 class="h4">Reviewer Board:</h4>
