--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="info-content">
           <h1 class="name" title="Ph.D. Marco Polignano" style="font-size:20px !important">Ph.D. Marco Polignano</h1>
           <p style="color:hsl(35, 100%, 68%);font-size:18px;">Assistant Professor in AI</p><br>
-          <p style="color:hsl(35, 100%, 68%);font-size:12px;">Citations: 1648<br> H-Index: 20<br> i10-index: 36</p><br>
+          <p style="color:hsl(35, 100%, 68%);font-size:12px;">Citations: 1726<br> H-Index: 20<br> i10-index: 36</p><br>
           <p style="color:hsl(35, 100%, 68%);font-size:12px;">Abilitazione 2° Fascia: 09/H1 - 01/B1 </p><br>
           <p class="title"><br> * Natural Language Processing <br> * Recommender Systems <br> * Machine Learning <br> * Data Mining<br><br></p>
         </div>
@@ -452,6 +452,8 @@
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">DMIF - Dipartimento di Scienze Matematiche, Informatiche e Fisiche</b></a>, 29 November 2024, Università di Udine, Italia. TITLE: “Large Language Models in Recommender Systems”</li>
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">Unict - Dipartimento di Matematica e Informatica</b></a>, 12 December 2024, Università di Catania, Italia. TITLE: “The long journey to Large Language Models: The NLP breakthrough”</li>
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">DELTA Lab - The Department of Industrial Engineering</b></a>, 16 January 2025, Tel-Aviv University, Israel TITLE: “LLMs meet Recommender Systems: An overview”</li>
+            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">Department of Electrical and Information Engineering - University of Cassino and Southern Lazio</b></a>, 4 April 2025, Italy TITLE: “The Italian Challenge in Large Language Models, LLaMAntino, Personalization, and Counteracting Biases and Cyberviolence”</li>
+          
           </ul>
         </section>
         <section class="skill" style="font-size:14px; font-weight: 300;">
@@ -463,6 +465,7 @@
             <li style="list-style: square;"> (IJCOL) <b>Italian Journal of Computational Linguistics, OpenEditions Journals</b> Electronic ISSN 2499-4553 - Editorial Board <a href="https://journals.openedition.org/ijcol/490" style="color:cyan; display:inline">https://journals.openedition.org/ijcol/490</a></li>
             <li style="list-style: square;"> (IA) <b>Intelligenza Artificiale, IO-Press</b> Electronic ISSN 2211-0097 - Guest Editor Special Issue NL4AI 2022  <a href="https://content.iospress.com/articles/intelligenza-artificiale/ia172157" style="color:cyan; display:inline">https://content.iospress.com/articles/intelligenza-artificiale/ia172157</a></li>
             <li style="list-style: square;"> (SREP) <b>Scientific Reports, Springer Nature</b> Electronic ISSN 2045-2322 - Editorial Borad <br> <a href="https://www.nature.com/srep/" style="color:cyan; display:inline">https://www.nature.com/srep/</a></li>
+            <li style="list-style: square;"> (KO) <b>Knowledge Organization, IMRPress</b> Electronic ISSN 0943-7444 - Editorial Borad <br> <a href="https://www.imrpress.com/journal/KO/about/editorial_board" style="color:cyan; display:inline">https://www.imrpress.com/journal/KO/about/editorial_board</a></li>
           
           </ul><br>
           <h4 class="h4">Reviewer Board:</h4>
@@ -547,16 +550,16 @@
           <h4 class="h4">TPC member of some of the most relevant scientific conferences</h4>
             <ul style="color:antiquewhite; list-style: square;">
               <li style="list-style: square;">IUI 2017-2018-2024, International Intelligent User Interface conference - GRIN-GII A </li>
-              <li style="list-style: square;">UMAP 2018/2022/2023/2024, User Modeling, Adaptation and Personalization conference - GRIN-GII B</li>
+              <li style="list-style: square;">UMAP 2018/2022/2023/2024/2025, User Modeling, Adaptation and Personalization conference - GRIN-GII B</li>
               <li style="list-style: square;">IJCAI 2020, International Joint Conference on Artificial Intelligence - GRIN-GII A++ </li>
               <li style="list-style: square;">ECAI 2020, European Conference on Artificial Intelligence - GRIN-GII A- </li>
               <li style="list-style: square;">RecSys 2020-2022-2023-2024, Conference on Recommender Systems - GRIN-GII A </li>
-              <li style="list-style: square;">TheWebConf 2022/2023 (WWW), International World Wide Web Conference - GRIN-GII A++ </li>
+              <li style="list-style: square;">TheWebConf 2022/2023/2025 (WWW), International World Wide Web Conference - GRIN-GII A++ </li>
               <li style="list-style: square;">Conference on Artificial Intelligence AAAI 2023, GRIN-GII A++</li>
               <li style="list-style: square;">ACL 2023, Annual Meeting of the Association for Computational Linguistics - GRIN-GII A ++</li>
-              <li style="list-style: square;">SIGIR 2023, Annual Conference of the Association for Computing Machinery Special Interest Group in Information Retrieval, - GRIN-GII A ++</li>
+              <li style="list-style: square;">SIGIR 2023/2025, Annual Conference of the Association for Computing Machinery Special Interest Group in Information Retrieval, - GRIN-GII A ++</li>
               <li style="list-style: square;">EACL 2024, The 18th Conference of the European Chapter of the Association for Computational Linguistics, - GRIN-GII A +</li>
-              <li style="list-style: square;">ECIR 2024, The 46th European Conference on Information Retrieval - GRIN-GII A -</li>
+              <li style="list-style: square;">ECIR 2024/2025, The European Conference on Information Retrieval - GRIN-GII A -</li>
             </ul>
         </section>
 
